crates/claptrap-core/tests/snapshots/tests__arg_group__id.snap
---
source: crates/claptrap-core/tests/tests.rs
expression: "super::run(spec, args)"
---
claptrap_foo='true'
claptrap_bar='false'
