crates/claptrap-core/tests/snapshots/tests__arg_group__requires_all.snap
---
source: crates/claptrap-core/tests/tests.rs
expression: "super::run(spec, args)"
---
command cat <<'EOF_bd3680b7'
[1m[31merror:[0m the following required arguments were not provided:
  [32m-v[0m

[1m[4mUsage:[0m [1mmyprog[0m [1m-d[0m [1m-v[0m [1m-c[0m

For more information, try '[1m--help[0m'.
EOF_bd3680b7
exit 1
